# BrowserBench

./: .gitignore  AGENTS.md  LICENSE  README.md  benchmark_doctor.py  browser_bench.py  browser_bench2.py  browser_power_results.csv  browser_power_results2.csv  pyproject.toml  report.py  report2.py  standardize_env.py
docs/: reference.md  releasing.md  usage.md
src/browserbench/: __init__.py  __main__.py  benchmark_ioreg.py  benchmark_powermetrics.py  cli.py  common.py  config.py  doctor.py  prep.py  reporting.py
src/browserbench/resources/: __init__.py  sites.txt
